FIX: CoolTextArea align left

--- a/src/components/cooltextarea/cooltextarea.css
+++ b/src/components/cooltextarea/cooltextarea.css
@@ -31,6 +31,7 @@ img.emoji {
   padding: 10px;
   margin: 10px;
   border-radius: 25px;
+  text-align: left;
 }
 
 #send-btn {
